--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,11 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
+    freemarker:
+      cache: false
 mybatis:
     typeAliasesPackage: com.huangting.electricity.entity
     mapUnderscoreToCamelCase: true
     useGeneratedKeys: true
     useColumnLabe: true
+    mapper-locations: "classpath*:mapper/*.xml"
