--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
         maxOpenPreparedStatements: 20
     freemarker:
       cache: false
+    mvc:
+      static-path-pattern: classpath:/static
 mybatis:
     typeAliasesPackage: com.huangting.electricity.entity
     mapUnderscoreToCamelCase: true
