--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
+
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.2.2</version>
 		</dependency>
-		
+
 		<!-- 渲染模板 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -84,16 +85,24 @@
 			<version>1.2.31</version>
 		</dependency>
 
+
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency> -->
+
+
 	</dependencies>
 
 	<build>
+		<finalName>electricity</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<fork>true</fork><!-- 如果没有该项配置，肯呢个devtools不会起作用，即应用不会restart -->
-				</configuration>
+				<!-- <configuration>
+					<fork>true</fork>如果没有该项配置，肯呢个devtools不会起作用，即应用不会restart
+				</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
