--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+    ports: 8081
 spring:
     datasource:
         name: electricity
@@ -26,3 +28,8 @@ mybatis:
     useGeneratedKeys: true
     useColumnLabe: true
     mapper-locations: "classpath*:mapper/*.xml"
+
+    
+    
+    
+    
